--- a/public/website/hoe-werkt-het.html
+++ b/public/website/hoe-werkt-het.html
@@ -25,7 +25,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html"><span>Waar</span><span>Overheid</span></a></h1>
 						<nav>
-							<a class="button" href="" target="_blank">Ga naar de app</a>
+							<a class="button" href="https://app.waaroverheid.nl" target="_blank">Ga naar de app</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -50,7 +50,7 @@
 							</div>
 							<h2><span>Waar</span><span>Overheid</span></h2>
 							<p>Zet raadsinformatie op de kaart.</p>
-							<a class="button" href="" target="_blank">Ga naar de applicatie</a>
+							<a class="button" href="https://app.waaroverheid.nl" target="_blank">Ga naar de applicatie</a>
 						</div>
 					</section>
 
@@ -60,7 +60,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#one" class="image"><img src="images/square-docs.png" alt="Zoekresultaat" /></a>
 									<div class="content">
 										<h2 class="major">Hoe werkt het?</h2>
 										<p>WaarOverheid is een webtoepassing die gebruik maakt van de raadsinformatie die beschikbaar is gesteld als open data via het project Open Raadsinformatie. Alleen gemeenten die hun raadsinformatie zodoende als open data beschikbaar stellen via de Open Raadsinformatie API zitten daardoor in WaarOverheid.</p>
@@ -72,7 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#two" class="image"><img src="images/square-muni.png" alt="Kaartoverzicht" /></a>
 									<div class="content">
 										<h2 class="major">Kaartoverzicht</h2>
 										<p>In de app is er altijd een gebied geselecteerd. De eerste selectie wordt gemaakt door een gemeente uit de lijst te kiezen of door de huidige locatie te gebruiken. Vervolgens kunnen er specifiekere gebieden geselecteerd worden en kan er ook naar aangrenzende gebieden genavigeerd worden. Hierbij is vrije navigatie door de kaart, bijvoorbeeld door te slepen, niet mogelijk.</p>
@@ -84,7 +84,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#three" class="image"><img src="images/square-filters.png" alt="Filters" /></a>
 									<div class="content">
 										<h2 class="major">Filters en Zoekresultaten</h2>
 										<p>Aanvankelijk worden tellingen van zoekresultaten ongefilterd op de kaart getoond. Er kan vervolgens in het filtermenu gezocht worden naar trefwoorden en woordcombinaties. Daarnaast kan gefilterd worden op de publicatiedatum en het soort document.</p>
@@ -96,7 +96,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#four" class="image"><img src="images/square-meldingen.png" alt="Meldingen" /></a>
 									<div class="content">
 										<h2 class="major">Blijf op de hoogte</h2>
 										<p>Naast het zoeken in het huidige aanbod van documenten is het ook mogelijk om op de hoogte gesteld te worden van nieuwe documenten. Dit is handig wanneer u het snel wilt weten wanneer uw buurt door de gemeenteraad besproken wordt, of bijvoorbeeld omdat uw gemeente nog niet beschikbaar is in WaarOverheid.</p>
@@ -108,11 +108,11 @@
 						<!-- Five -->
 							<section id="five" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#five" class="image"><img src="images/square-uva.png" alt="Universiteit van Amsterdam" /></a>
 									<div class="content">
 										<h2 class="major">Open Data, Open Source</h2>
-										<p>WaarOverheid gebruikt nog enkele open databronnen naast Open Raadsinformatie. Deze data is afkomstig van <a href="http://www.openstreetmap.org/">OpenStreetMap</a>, het <a href="https://www.cbs.nl/nl-nl/dossier/nederland-regionaal/geografische%20data/wijk-en-buurtkaart-2017">CBS en Kadaster</a> en <a href="http://wiki.dbpedia.org/">DBpedia</a>.</p>
-										<p>Alle broncode is onder open source licenties beschikbaar. De <a href="https://github.com/stamkracht/waaroverheid">frontend</a> is beschikbaar onder de MIT License en de <a href="https://github.com/WaarOverheid/open-raadsinformatie">aangepaste Open Raadsinformatie API</a> is beschikbaar onder de GNU LGPLv3. De software die verantwoordelijk is voor de locatieherkenning komt voort uit een onderzoeksproject bij de Universiteit van Amsterdam. Deze software, <a href="https://bitbucket.org/aolieman/loclinkvis">LocLinkVis</a>, is onder de GNU AGPLv3 te gebruiken. Zie voor meer informatie over LocLinkVis <a href="https://arxiv.org/pdf/1509.02010">het hierover gepubliceerde artikel</a>.</p>
+										<p>WaarOverheid gebruikt nog enkele open databronnen naast Open Raadsinformatie. Deze data is afkomstig van <a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a>, het <a href="https://www.cbs.nl/nl-nl/dossier/nederland-regionaal/geografische%20data/wijk-en-buurtkaart-2017" target="_blank">CBS en Kadaster</a> en <a href="http://wiki.dbpedia.org/" target="_blank">DBpedia</a>.</p>
+										<p>Alle broncode is onder open source licenties beschikbaar. De <a href="https://github.com/stamkracht/waaroverheid" target="_blank">frontend</a> is beschikbaar onder de MIT License en de <a href="https://github.com/WaarOverheid/open-raadsinformatie" target="_blank">aangepaste Open Raadsinformatie API</a> is beschikbaar onder de GNU LGPLv3. De software die verantwoordelijk is voor de locatieherkenning komt voort uit een onderzoeksproject bij de Universiteit van Amsterdam. Deze software, <a href="https://bitbucket.org/aolieman/loclinkvis" target="_blank">LocLinkVis</a>, is onder de GNU AGPLv3 te gebruiken. Zie voor meer informatie over LocLinkVis <a href="https://arxiv.org/pdf/1509.02010" target="_blank">het hierover gepubliceerde artikel</a>.</p>
 									</div>
 								</div>
 							</section>
