links and images

--- a/public/website/hoe-werkt-het.html
+++ b/public/website/hoe-werkt-het.html
@@ -6,9 +6,12 @@
 -->
 <html>
 	<head>
-		<title>WaarOverheid</title>
+		<title>Hoe werkt het? &ndash; WaarOverheid</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/sass/main.css" />
 		<!--[if lte IE 9]>
@@ -63,7 +66,7 @@
 									<a href="#one" class="image"><img src="images/square-docs.png" alt="Zoekresultaat" /></a>
 									<div class="content">
 										<h2 class="major">Hoe werkt het?</h2>
-										<p>WaarOverheid is een webtoepassing die gebruik maakt van de raadsinformatie die beschikbaar is gesteld als open data via het project Open Raadsinformatie. Alleen gemeenten die hun raadsinformatie zodoende als open data beschikbaar stellen via de Open Raadsinformatie API zitten daardoor in WaarOverheid.</p>
+										<p>WaarOverheid is een webtoepassing die gebruik maakt van de raadsinformatie die beschikbaar is gesteld als open data via het project <a href="https://www.da2020.nl/ondersteuningsmiddelen/pilots-open-raadsinformatie" target="_blank">Open Raadsinformatie</a>. Alleen gemeenten die hun raadsinformatie zodoende als open data beschikbaar stellen via de Open Raadsinformatie API zitten daardoor in WaarOverheid.</p>
 										<p>WaarOverheid werkt door middel van slimme algoritmes (een combinatie van textmining en information retrieval) om raadsinformatie te scannen en daarna automatisch te koppelen aan wijk, buurt en straatnamen en zodoende op de kaart te plaatsen.</p>
 									</div>
 								</div>
