--- a/public/website/index.html
+++ b/public/website/index.html
@@ -6,9 +6,12 @@
 -->
 <html>
 	<head>
-		<title>WaarOverheid</title>
+		<title>Over &ndash; WaarOverheid</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/sass/main.css" />
 		<!--[if lte IE 9]>
@@ -25,7 +28,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html"><span>Waar</span><span>Overheid</span></a></h1>
 						<nav>
-							<a class="button" href="" target="_blank">Ga naar de app</a>
+							<a class="button" href="https://app.waaroverheid.nl" target="_blank">Ga naar de app</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -50,7 +53,7 @@
 							</div>
 							<h2><span>Waar</span><span>Overheid</span></h2>
 							<p>Zet raadsinformatie op de kaart.</p>
-							<a class="button" href="" target="_blank">Ga naar de applicatie</a>
+							<a class="button" href="https://app.waaroverheid.nl" target="_blank">Ga naar de applicatie</a>
 						</div>
 					</section>
 
@@ -60,11 +63,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="http://www.qollap.com/" target="_blank" class="image"><img src="images/logo-qollap.svg" title="Qollap" /></a>
 									<div class="content">
 										<h2 class="major">Over</h2>
 										<p>Altijd al willen weten wanneer de gemeenteraad over jouw wijk of buurt praat? WaarOverheid maakt dit mogelijk. Bekijk jouw wijk of buurt op de kaart, zoek naar stukken uit de raad en stel jouw eigen meldingen in. Zo krijg je automatisch een bericht in je mailbox wanneer de raad praat over een onderwerp of gebied wat jouw interesse heeft.</p>
-										<p>WaarOverheid is ontwikkeld door StamKracht met ondersteuning van de Universiteit van Amsterdam. WaarOverheid is de winnaar van de Open Raadsinformatie app-challenge georganiseerd door VNG Realisatie met ondersteuning van het ministerie van Binnenlandse Zaken en Open State Foundation.</p>
+										<p>WaarOverheid is ontwikkeld door <a href="http://www.qollap.com/" target="_blank">Qollap</a> met ondersteuning van de Universiteit van Amsterdam. WaarOverheid is de winnaar van de <a href="https://www.da2020.nl/nieuws/raadsinformatie-op-de-kaart-dankzij-app-waaroverheid" target="_blank">Open Raadsinformatie app-challenge</a> georganiseerd door VNG Realisatie met ondersteuning van het ministerie van Binnenlandse Zaken en Open State Foundation.</p>
 										<a href="hoe-werkt-het.html#one" class="special">Hoe werkt het?</a>
 									</div>
 								</div>
@@ -73,10 +76,10 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://www.vngrealisatie.nl/" target="_blank" class="image"><img src="images/logo-vng-realisatie.jpg" title="VNG Realisatie" /></a>
 									<div class="content">
 										<h2 class="major">Open Raadsinformatie</h2>
-										<p>WaarOverheid maakt gebruik van raadsinformatie - zoals agenda’s, voorstellen, moties en verslagen – die gemeenten via het VNG Realisatie project Open Raadsinformatie beschikbaar stellen als open data. Hiermee kan eenieder deze informatie hergebruiken in diverse toepassingen.</p>
+										<p>WaarOverheid maakt gebruik van raadsinformatie - zoals agenda’s, voorstellen, moties en verslagen – die gemeenten via het VNG Realisatie project <a href="https://www.da2020.nl/ondersteuningsmiddelen/pilots-open-raadsinformatie" target="_blank">Open Raadsinformatie</a> beschikbaar stellen als open data. Hiermee kan eenieder deze informatie <a href="http://docs.openraadsinformatie.nl/" target="_blank">hergebruiken</a> in diverse toepassingen.</p>
 										<p>Hiermee is WaarOverheid een voorbeeld van wat mogelijk is wanneer gemeenten hun raadsinformatie beschikbaar stellen als open data.</p>
 									</div>
 								</div>
@@ -85,7 +88,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://openstate.eu/nl/" target="_blank" class="image"><img src="images/logo-openstate.png" title="Open State Foundation" /></a>
 									<div class="content">
 										<h2 class="major">Jouw gemeente ook in WaarOverheid?</h2>
 										<p>Er doen momenteel 100 gemeenten mee aan Open Raadsinformatie. Daarmee is de raadsinformatie van deze gemeenten ook beschikbaar in WaarOverheid. Zit jouw gemeente nog niet in WaarOverheid? Dan stelt deze gemeente de eigen raadsinformatie waarschijnlijk nog niet beschikbaar als open data. Stuur jouw raadsgriffie in dit geval een bericht om te vragen om ze ook hun raadsinformatie beschikbaar stellen als open data.</p>
@@ -96,11 +99,11 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://www.rijksoverheid.nl/ministeries/ministerie-van-binnenlandse-zaken-en-koninkrijksrelaties" target="_blank" class="image"><img src="images/logo-min-bzk.png" title="Ministerie BZK" /></a>
 									<div class="content">
 										<h2 class="major">Disclaimer</h2>
 										<p>WaarOverheid werkt met slimme algoritmes om raadsinformatie op de kaart te plaatsen. Dit is nooit 100% accuraat. Er kunnen daarom foutjes inzitten. Daarnaast zet WaarOverheid informatie door die gemeenten als openbare raadsinformatie publiceren. Kom je foutjes tegen of informatie die persoonsgegevens bevat? Geef het aan door op het ‘vlaggetje’ te klikken naast het document en wij geven het door aan de betreffende gemeente.</p>
-										<p>Stamkracht, VNG Realisatie en het ministerie van Binnenlandse Zaken zijn niet verantwoordelijk of aansprakelijk voor de inhoud van de door gemeenten gepubliceerde raadsinformatie die doorzoekbaar is via WaarOverheid.</p>
+										<p>Qollap, VNG Realisatie en het ministerie van Binnenlandse Zaken zijn niet verantwoordelijk of aansprakelijk voor de inhoud van de door gemeenten gepubliceerde raadsinformatie die doorzoekbaar is via WaarOverheid.</p>
 									</div>
 								</div>
 							</section>
