--- a/public/website/hoe-werkt-het.html
+++ b/public/website/hoe-werkt-het.html
@@ -38,8 +38,8 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Over</a></li>
-								<li><a href="hoe-werkt-het.html">Hoe werkt het?</a></li>
+								<li><a href="index.html#one">Over</a></li>
+								<li><a href="hoe-werkt-het.html#one">Hoe werkt het?</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
