--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="application-name" content="WaarOverheid">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffe1d0">
+    <script src="/js/dist/oldbrowser.js"></script>
     <title>WaarOverheid</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
