--- a/public/index.html
+++ b/public/index.html
@@ -53,5 +53,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="outdated"></div>
   </body>
 </html>
