--- a/public/website/hoe-werkt-het.html
+++ b/public/website/hoe-werkt-het.html
@@ -91,7 +91,7 @@
 									<div class="content">
 										<h2 class="major">Filters en Zoekresultaten</h2>
 										<p>Aanvankelijk worden tellingen van zoekresultaten ongefilterd op de kaart getoond. Er kan vervolgens in het filtermenu gezocht worden naar trefwoorden en woordcombinaties. Daarnaast kan gefilterd worden op de publicatiedatum en het soort document.</p>
-										<p>Na het selecteren van een gemeente, wijk of buurt kan de lijst met zoekresultaten geraadpleegd worden. Na het klikken op een zoekresultaat is meer informatie te zien, zoals de brondocumenten en de zinnen daaruit die relevant zijn voor het hudige overzicht. Daardoor is het meteen duidelijk waarom precies die documenten relevant zijn.</p>
+										<p>Na het selecteren van een gemeente, wijk of buurt kan de lijst met zoekresultaten geraadpleegd worden. Na het klikken op een zoekresultaat is meer informatie te zien, zoals de brondocumenten en de zinnen daaruit die relevant zijn voor het huidige overzicht. Daardoor is het meteen duidelijk waarom precies die documenten relevant zijn.</p>
 									</div>
 								</div>
 							</section>
